fixed tablet contact alignment and about alignment

--- a/css/main.css
+++ b/css/main.css
@@ -456,7 +456,23 @@ textarea {
       height: auto;
     }
 
+/**** ABOUT TABLET****/
 
+    .half-width {
+      margin-right: 5%;
+      margin-bottom: 4%;
+    }
+
+/****** CONTACT TABLET ******/
+
+  #contact-info {
+    margin-top: 10%;
+    text-align: center;
+  }
+
+  #contact-info ul li {
+    margin-right: 4%;
+  }
 
 }
 
